@@ -12,4 +12,4 @@ region_constraint =  15.48 38.30, 15.63 38.30,  15.63 38.01,  15.48 38.01
 export_dir = /tmp/
 
 insured_losses = true
-all_losses = true
+asset_loss_table = true
