@@ -17,5 +17,5 @@ structural_vulnerability_file = structural_vulnerability_model.xml
 
 [calculation]
 insured_losses = False
-all_losses = True
+asset_loss_table = True
 export_dir = /tmp
