@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Renamed the parameter `all_losses` to `asset_loss_table`
   * Added an experimental version of the event based risk calculator which
     is able to use GMFs imported from an external file
   * Added a `max_curve` functionality to compute the upper limit of the
